# vintage-resale-mcp

./: .env.example  Caddyfile  Dockerfile  ONBOARDING.md  ONBOARDING_SESSION.md  README.md  config.py  deploy.sh  docker-compose.yml  pyproject.toml  server.py
prompts/: competitive_response_system.md  install_assistant_system.md  public_messaging_system.md  sales_qualification_system.md
site/: index.html
strategy/: competitors.example.json
tools/: __init__.py  resale.py
